--- a/style.css
+++ b/style.css
@@ -284,6 +284,12 @@ img{
     filter: grayscale(0%);
 	margin:auto;
 }
+#band a  {
+	text-decoration:none;
+	    color:#f5f5f5;
+		font-size:2.5rem;
+		font-family:'Vollkorn';
+}
 
 
 /*tour container*/
