added descriptive markup, removed contact form, updated content and remove user style agent margin on body

--- a/source/styles/home-style.css
+++ b/source/styles/home-style.css
@@ -1,4 +1,5 @@
 body {  
+    margin: 0;
     background:linear-gradient(92deg, rgba(181, 73, 69, 0.63), #b2c4e2);
     background-size:100% 100%;
     color:rgb(49, 47, 47);
@@ -268,6 +269,16 @@ textarea {
 }
 .weighty{
     color:white;
+}
+
+.twitter-link {
+  color: white;
+  transition: color 0.25s;
+  font-size: 1.5rem;
+}
+
+.twitter-link:hover {
+  color: rgb(245, 168, 206);
 }
 
 
